# Revora-Contracts

./: .gitignore  Cargo.toml  ISSUER_TRANSFER.md  MULTISIG_INIT_TEST_SUMMARY.md  README.md  TESTNET_MODE.md  TODO.md  cargo_errors_utf8.txt  fix.ps1  fix.py  package-lock.json
docs/: audit-summary-reconciliation.md  claimable-chunk-computation.md  clippy-format-gate-hardening.md  compute-share-overflow-protection.md  concentration-reporting-integrity.md  contract-fuzz-harness.md  core-event-version-field.md  cross-contract-transfer-failure-handling.md  investment-constraints.md  multisig-duplicate-approval-guards.md  multisig-initialization-validation.md  multisig-owner-removal-safety.md  multisig-proposal-expiry.md  negative-amount-validation-matrix.md  offering-duplicate-prevention.md  offering-pagination-stability.md  payment-token-decimal-compatibility.md  payment-token-locking.md  per-offering-emergency-pause.md  period-ordering-invariants.md  property-based-invariant-tests.md  reconciliation-event-completeness.md  revenue-range-chunk-query.md  security-doc-sync.md  share-sum-invariant-checks.md  snapshot-override-negative-matrix.md  structured-error-coverage-expansion.md  time-window-boundary-matrix.md  vesting-event-schema-versioning.md  vesting-partial-claim-tracking.md  zero-value-revenue-policy.md
src/: audit_summary_tests.rs  chunking_tests.rs  invalid_amount_matrix_tests.rs  lib.rs  milestone_signals.rs  normalize_share_tests.rs  proptest_helpers.rs  revenue_deposit_contract.rs  security_assertions.rs  security_assertions_integration_tests.rs  test.rs  (+16 more)
(+8 files in other folders)
