[package]
name = "revora-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "20.5.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils", "alloc"] }
arbitrary = "1.4"

[profile.release]
opt-level = "z"
overflow-checks = true


