[package]
name = "revora-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

[dev-dependencies]
derive_arbitrary = "=1.3.2"
proptest = "1.6.0"
soroban-sdk = { version = "20.5.0", features = ["testutils", "alloc"] }
proptest = "1.4.0"

[profile.release]
opt-level = "z"
overflow-checks = true

